--- a/wldragnet/templates/site/pages/faq.html
+++ b/wldragnet/templates/site/pages/faq.html
@@ -26,7 +26,7 @@
                 <h2 class="accordion-header" id="headingOne"><button aria-controls="collapseOne" aria-expanded="false" class="accordion-button collapsed" data-mdb-target="#collapseOne" data-mdb-toggle="collapse" type="button" style="border-radius:0;">What is WLDragnet?</button></h2>
                 <div aria-labelledby="headingOne" class="accordion-collapse square-border collapse" data-mdb-parent="#accordionFAQ" id="collapseOne" style="">
                     <div class="accordion-body">
-                        WLDragnet is an exclusive investigative series by <a href="https://talkliberation.substack.com/s/talk-liberation-investigates" target="_blank" style="color:#6513A3;" class="keychainify-checked">Talk Liberation Investigates</a>.	WLDragnet revealed widespread monitoring of the social media accounts of activists, journalists, influencers and everyday citizens ho are in support of Julian Assange and WikiLeaks.
+                        WLDragnet is an exclusive investigative series by <a href="https://talkliberation.substack.com/s/talk-liberation-investigates" target="_blank" style="color:#6513A3;" class="keychainify-checked">Talk Liberation Investigates</a>.	WLDragnet revealed widespread monitoring of the social media accounts of activists, journalists, influencers and everyday citizens who are in support of Julian Assange and WikiLeaks.
                     </div>
                 </div>
             </div>
