--- a/wldragnet/static/assets/css/tl-style.css
+++ b/wldragnet/static/assets/css/tl-style.css
@@ -22,8 +22,19 @@ Table of contents
 font & reset css
 --------------------------------------------- 
 */
-
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 100;
+    src: url('../fonts/Montserrat/montserrat-v18-latin-100.eot');
+    /* IE9 Compat Modes */
+    src: local(''), url('../fonts/Montserrat/montserrat-v18-latin-100.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('../fonts/Montserrat/montserrat-v18-latin-100.woff2') format('woff2'), /* Super Modern Browsers */
+    url('../fonts/Montserrat/montserrat-v18-latin-100.woff') format('woff'), /* Modern Browsers */
+    url('../fonts/Montserrat/montserrat-v18-latin-100.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('../fonts/Montserrat/montserrat-v18-latin-100.svg#Montserrat') format('svg');
+    /* Legacy iOS */
+}
 
 /* 
 ---------------------------------------------
