--- a/wldragnet/templates/site/pages/faq.html
+++ b/wldragnet/templates/site/pages/faq.html
@@ -56,6 +56,30 @@ repository which is <a href="https://talkliberation.com/wldragnet-repo" target="
                 </div>
             </div>
             <div class="accordion-item square-border">
+                <h2 class="accordion-header" id="headingSeven"><button aria-controls="collapseSeven" aria-expanded="false" class="accordion-button collapsed" data-mdb-target="#collapseSeven" data-mdb-toggle="collapse" type="button" style="border-radius:0;">Why is this publication significant?</button></h2>
+                <div aria-labelledby="headingSeven" class="accordion-collapse square-border collapse" data-mdb-parent="#accordionFAQ" id="collapseSeven" style="">
+                    <div class="accordion-body">
+                        Though all documents that support our research are publicly-available, their compilation, annotation, and analysis
+comprises an original and noteworthy contribution to public understanding of mass surveillance.<br>
+                        <br>
+                        The documents relate to monitoring, tracking, and reporting measures described by NodeXL principals as intended to enable "detection, deflection, and deterrance" of targeted account holders. Such ideological weaponizing of social media presents a threat to
+democratically-protected speech and actions of a wide variety of people, particularly those identified via their user handle(s) in the NodeXL files, with the obvious capacity to result in real world harm.<br>
+                        <br>
+                        We seek to mitigate that real world harm by empowering the public to discover whether they have been unwittingly pulled into the dragnet.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item square-border">
+                <h2 class="accordion-header" id="headingSeven"><button aria-controls="collapseSeven" aria-expanded="false" class="accordion-button collapsed" data-mdb-target="#collapseSeven" data-mdb-toggle="collapse" type="button" style="border-radius:0;">Why are handles like @elonmusk in the results?</button></h2>
+                <div aria-labelledby="headingSeven" class="accordion-collapse square-border collapse" data-mdb-parent="#accordionFAQ" id="collapseSeven" style="">
+                    <div class="accordion-body">
+                        Talk Liberation's <a href="https://talkliberation.com/wldragnet" target="_blank">WLDragnet reporting</a> makes clear that journalists, activists, and many others have been targeted for their advocacy and speech. One of the major criticisms of social network analysis via NodeXL is that graphs pull in user handles divorced from appropriate context.<br>
+                        <br>
+To understand the reports, it is important to consider the results in context and consider why a specific user handle is mentioned. A major goal of the WLDragnet Search tool is to make this process as convenient as possible. This is why, for example, we provide a short description, keywords, and hashtags alongside lists of Twitter handles and links to the archived sources.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item square-border">
                 <h2 class="accordion-header" id="headingFive"><button aria-controls="collapseFive" aria-expanded="false" class="accordion-button collapsed" data-mdb-target="#collapseFive" data-mdb-toggle="collapse" type="button" style="border-radius:0;">Who authored WLDragnet?</button></h2>
                 <div aria-labelledby="headingFive" class="accordion-collapse square-border collapse" data-mdb-parent="#accordionFAQ" id="collapseFive" style="">
                     <div class="accordion-body">
@@ -82,6 +106,14 @@ comprises an original and noteworthy contribution to public understanding of mas
 democratically-protected speech and actions of a wide variety of people, particularly those identified via their user handle(s) in the NodeXL files, with the obvious capacity to result in real world harm.<br>
                         <br>
                         We seek to mitigate that real world harm by empowering the public to discover whether they have been unwittingly pulled into the dragnet.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item square-border">
+                <h2 class="accordion-header" id="headingSeven"><button aria-controls="collapseSeven" aria-expanded="false" class="accordion-button collapsed" data-mdb-target="#collapseSeven" data-mdb-toggle="collapse" type="button" style="border-radius:0;">How have the creators of NodeXL reacted?</button></h2>
+                <div aria-labelledby="headingSeven" class="accordion-collapse square-border collapse" data-mdb-parent="#accordionFAQ" id="collapseSeven" style="">
+                    <div class="accordion-body">
+                        The creators of NodeXL have reacted to the WLDragnet revelations by tracking Talk Liberation and themselves using NodeXL. Their attempts at reputation management via generating graphs about WLDragnet are now included within the WLDragnet database itself.
                     </div>
                 </div>
             </div>
