--- a/wldragnet/templates/site/pages/faq.html
+++ b/wldragnet/templates/site/pages/faq.html
@@ -70,17 +70,19 @@ democratically-protected speech and actions of a wide variety of people, particu
                 </div>
             </div>
             <div class="accordion-item square-border">
-                <h2 class="accordion-header" id="headingSix"><button aria-controls="collapseSix" aria-expanded="false" class="accordion-button collapsed" data-mdb-target="#collapseSix" data-mdb-toggle="collapse" type="button" style="border-radius:0;">Why are handles like @elonmusk in the results?</button></h2>
+                <h2 class="accordion-header" id="headingSix"><button aria-controls="collapseSix" aria-expanded="false" class="accordion-button collapsed" data-mdb-target="#collapseSix" data-mdb-toggle="collapse" type="button" style="border-radius:0;">Why are handles like @nato in the results?</button></h2>
                 <div aria-labelledby="headingSix" class="accordion-collapse square-border collapse" data-mdb-parent="#accordionFAQ" id="collapseSix" style="">
                     <div class="accordion-body">
-                        Talk Liberation's <a href="https://talkliberation.com/wldragnet" target="_blank">WLDragnet reporting</a> makes clear that journalists, activists, and many others have been targeted for their advocacy and speech. One of the major criticisms of social network analysis via NodeXL is that graphs pull in user handles divorced from appropriate context.<br>
+                        Talk Liberation's <a href="https://talkliberation.com/wldragnet" target="_blank" style="color:#6513A3;">WLDragnet reporting</a> makes clear that journalists, activists, and many others have been targeted for their advocacy and speech. To understand the reports, it is important to consider the results in context to determine why a specific user handle is mentioned. A major goal of the WLDragnet Search tool is to make this process as convenient as possible. This is why, for example, we provide a short description, keywords, and hashtags alongside lists of Twitter handles and links to the archived sources.
+<br><br>
+A major criticism of social network analysis via NodeXL is that graphs pull in user handles divorced from appropriate context. This means that even DoD and CIA contractors end up in the dataset. Other examples include reports run by the creators of NodeXL for NATO meetings that include official government handles.<br>
                         <br>
-To understand the reports, it is important to consider the results in context and consider why a specific user handle is mentioned. A major goal of the WLDragnet Search tool is to make this process as convenient as possible. This is why, for example, we provide a short description, keywords, and hashtags alongside lists of Twitter handles and links to the archived sources.
+
                     </div>
                 </div>
             </div>
             <div class="accordion-item square-border">
-                <h2 class="accordion-header" id="headingSeven"><button aria-controls="collapseSeven" aria-expanded="false" class="accordion-button collapsed" data-mdb-target="#collapseSeven" data-mdb-toggle="collapse" type="button" style="border-radius:0;">Who authored WLDragnet?</button></h2>
+                <h2 class="accordion-header" id="headingSeven"><button aria-controls="collapseSeven" aria-expanded="false" class="accordion-button collapsed" data-mdb-target="#collapseSeven" data-mdb-toggle="collapse" type="button" style="border-radius:0;">Who authored the WLDragnet reporting?</button></h2>
                 <div aria-labelledby="headingSeven" class="accordion-collapse square-border collapse" data-mdb-parent="#accordionFAQ" id="collapseSeven" style="">
                     <div class="accordion-body">
                         The WLDragnet Investigates series is authored by Sean O'Brien (Chief Security Officer, <a href="https://panquake.com/" target="_blank" style="color:#6513A3;" class="keychainify-checked">Panquake</a>; Founder of Yale University Privacy Lab and Lecturer at Yale Law School) and Suzie Dawson (Founder and Chief Product Officer, <a href="https://panquake.com/" target="_blank" style="color:#6513A3;" class="keychainify-checked">Panquake</a>). The WLDragnet Report Search app is brought to you by the development team building <a href="https://panquake.com/" target="_blank" style="color:#6513A3;" class="keychainify-checked">Panquake</a>, and is administered by Talk Liberation ehf. in Iceland using sustainable geothermal and hydroelectric energy.
@@ -113,7 +115,7 @@ democratically-protected speech and actions of a wide variety of people, particu
                 <h2 class="accordion-header" id="headingTen"><button aria-controls="collapseTen" aria-expanded="false" class="accordion-button collapsed" data-mdb-target="#collapseTen" data-mdb-toggle="collapse" type="button" style="border-radius:0;">How have the creators of NodeXL reacted?</button></h2>
                 <div aria-labelledby="headingTen" class="accordion-collapse square-border collapse" data-mdb-parent="#accordionFAQ" id="collapseTen" style="">
                     <div class="accordion-body">
-                        The creators of NodeXL have reacted to the WLDragnet revelations by tracking Talk Liberation and themselves using NodeXL. Their attempts at reputation management via generating graphs about WLDragnet are now included within the WLDragnet database itself.
+                        The creators of NodeXL have reacted to the WLDragnet revelations by tracking Talk Liberation and themselves using NodeXL. Their attempts at reputation management via reports about WLDragnet means they are now included within the WLDragnet dataset itself.
                     </div>
                 </div>
             </div>
