--- a/wldragnet/templates/site/pages/faq.html
+++ b/wldragnet/templates/site/pages/faq.html
@@ -73,7 +73,7 @@ democratically-protected speech and actions of a wide variety of people, particu
                 <h2 class="accordion-header" id="headingSix"><button aria-controls="collapseSix" aria-expanded="false" class="accordion-button collapsed" data-mdb-target="#collapseSix" data-mdb-toggle="collapse" type="button" style="border-radius:0;">Why are handles like @nato in the results?</button></h2>
                 <div aria-labelledby="headingSix" class="accordion-collapse square-border collapse" data-mdb-parent="#accordionFAQ" id="collapseSix" style="">
                     <div class="accordion-body">
-                        Talk Liberation's <a href="https://talkliberation.com/wldragnet" target="_blank" style="color:#6513A3;">WLDragnet reporting</a> makes clear that journalists, activists, and many others have been targeted for their advocacy and speech. To understand the reports, it is important to consider the results in context to determine why a specific user handle is mentioned. A major goal of the WLDragnet Search tool is to make this process as convenient as possible. This is why, for example, we provide a short description, keywords, and hashtags alongside lists of Twitter handles and links to the archived sources.
+                        Talk Liberation's <a href="https://talkliberation.com/wldragnet" target="_blank" style="color:#6513A3;">WLDragnet reporting</a> makes clear that journalists, activists, and many others have been targeted for their advocacy and speech. It is important to consider the results in context to determine why a specific user handle is mentioned. A major goal of the WLDragnet Search tool is to make this process as convenient as possible. This is why, for example, we provide a short description, keywords, and hashtags alongside lists of Twitter handles and links to the archived sources.
 <br><br>
 A major criticism of social network analysis via NodeXL is that graphs pull in user handles divorced from appropriate context. This means that even DoD and CIA contractors end up in the dataset. Other examples include reports run by the creators of NodeXL for NATO meetings that include official government handles.<br>
                         <br>
@@ -115,7 +115,7 @@ democratically-protected speech and actions of a wide variety of people, particu
                 <h2 class="accordion-header" id="headingTen"><button aria-controls="collapseTen" aria-expanded="false" class="accordion-button collapsed" data-mdb-target="#collapseTen" data-mdb-toggle="collapse" type="button" style="border-radius:0;">How have the creators of NodeXL reacted?</button></h2>
                 <div aria-labelledby="headingTen" class="accordion-collapse square-border collapse" data-mdb-parent="#accordionFAQ" id="collapseTen" style="">
                     <div class="accordion-body">
-                        The creators of NodeXL have reacted to the WLDragnet revelations by tracking Talk Liberation and themselves using NodeXL. Their attempts at reputation management via reports about WLDragnet means they are now included within the WLDragnet dataset itself.
+                        The creators of NodeXL have reacted to the WLDragnet revelations by tracking Talk Liberation alongside themselves in NodeXL reports. Their attempts at reputation management by studying the spread of WLDragnet means they are now included within the WLDragnet dataset itself.
                     </div>
                 </div>
             </div>
